# whir

./: Cargo.toml  README.md
benches/: commit.rs  eq.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  field.rs  lib.rs  test.rs  utils.rs
crates/merkle/: Cargo.toml
crates/merkle/src/: lib.rs  poseidon.rs  poseidon_packed.rs  rust_crypto.rs
crates/poly/: Cargo.toml
crates/poly/src/: eq.rs  lib.rs  point.rs  poly.rs  test.rs  utils.rs
crates/transcript/: Cargo.toml
crates/transcript/src/: field.rs  lib.rs  poseidon.rs
crates/whir/: Cargo.toml
crates/whir/src/: commit.rs  giacomo.rs  lib.rs  params.rs  test.rs  test2.rs  whir.rs  whir2.rs
crates/whir/src/sumcheck/: combine.rs  expr.rs  mod.rs  prover.rs  prover2.rs  svo.rs  test.rs  test2.rs  verifier.rs  verifier2.rs
src/: data.rs  field.rs  lib.rs  poly.rs  study.rs  utils.rs
src/merkle/: comm.rs  matrix.rs  mod.rs  poseidon.rs  poseidon_packed.rs  rust_crypto.rs
src/pcs/: mod.rs  stir.rs  sumcheck.rs  whir.rs
src/pcs/sumcheck/: combine.rs  compress.rs  eq.rs  mod.rs  prover.rs  split.rs  svo.rs  test.rs  verifier.rs
src/poly/: mod.rs
src/study/: eq.rs  mod.rs  pow.rs
src/transcript/: mod.rs  poseidon.rs  rust_crypto.rs
src/utils/: arithmetic.rs  mod.rs
