[workspace.package]
edition = "2024"
rust-version = "1.94"
version = "0.1.0"

[workspace]
members = ["crates/poly", "crates/transcript", "crates/common", "crates/merkle", "crates/whir"]
resolver = "2"

[workspace.dependencies]

common = {path = "crates/common", package = "p3ml-common"}
merkle = {path = "crates/merkle", package = "p3ml-merkle"}
poly = {path = "crates/poly", package = "p3ml-poly"}
transcript = {path = "crates/transcript", package = "p3ml-transcript"}
whir = {path = "crates/whir", package = "p3ml-whir"}

itertools = "0.13"
rand = {version = "0.10"}
rayon = "1.8"
serde = {version = "1.0", features = ["derive"]}

digest = "0.10.3"
sha2 = "0.10.8"
sha3 = "0.10.8"

p3-baby-bear = {git = "https://github.com/plonky3/plonky3.git"}
p3-challenger = {git = "https://github.com/Plonky3/Plonky3.git"}
p3-dft = {git = "https://github.com/Plonky3/Plonky3.git"}
p3-field = {git = "https://github.com/plonky3/plonky3.git"}
p3-goldilocks = {git = "https://github.com/plonky3/plonky3.git"}
p3-koala-bear = {git = "https://github.com/Plonky3/Plonky3.git"}
p3-matrix = {git = "https://github.com/Plonky3/Plonky3.git"}
p3-maybe-rayon = {git = "https://github.com/Plonky3/Plonky3.git"}
p3-multilinear-util = {git = "https://github.com/Plonky3/Plonky3.git"}
p3-symmetric = {git = "https://github.com/Plonky3/Plonky3.git"}
p3-util = {git = "https://github.com/Plonky3/Plonky3.git"}

# p3-baby-bear = {path = "../../../../Plonky3/Plonky3/baby-bear"}
# p3-challenger = {path = "../../../../Plonky3/Plonky3/challenger"}
# p3-dft = {path = "../../../../Plonky3/Plonky3/dft"}
# p3-field = {path = "../../../../Plonky3/Plonky3/field"}
# p3-goldilocks = {path = "../../../../Plonky3/Plonky3/goldilocks"}
# p3-koala-bear = {path = "../../../../Plonky3/Plonky3/koala-bear"}
# p3-matrix = {path = "../../../../Plonky3/Plonky3/matrix"}
# p3-maybe-rayon = {path = "../../../../Plonky3/Plonky3/maybe-rayon"}
# p3-multilinear-util = {path = "../../../../Plonky3/Plonky3/multilinear-util"}
# p3-symmetric = {path = "../../../../Plonky3/Plonky3/symmetric"}
# p3-util = {path = "../../../../Plonky3/Plonky3/util"}

# p3-baby-bear = {path = "../../Plonky3/Plonky3/baby-bear"}
# p3-challenger = {path = "../../Plonky3/Plonky3/challenger"}
# p3-dft = {path = "../../Plonky3/Plonky3/dft"}
# p3-field = {path = "../../Plonky3/Plonky3/field"}
# p3-goldilocks = {path = "../../Plonky3/Plonky3/goldilocks"}
# p3-interpolation = {path = "../../Plonky3/Plonky3/interpolation"}
# p3-koala-bear = {path = "../../Plonky3/Plonky3/koala-bear"}
# p3-matrix = {path = "../../Plonky3/Plonky3/matrix"}
# p3-maybe-rayon = {path = "../../Plonky3/Plonky3/maybe-rayon"}
# p3-multilinear-util = {path = "../../Plonky3/Plonky3/multilinear-util"}
# p3-symmetric = {path = "../../Plonky3/Plonky3/symmetric"}
# p3-util = {path = "../../Plonky3/Plonky3/util"}

bincode = "1.3.3"
tracing = "0.1.37"
transpose = "0.2.3"

criterion = "0.5"
tracing-forest = {version = "0.1.6", features = ["ansi", "smallvec"]}
tracing-subscriber = {version = "0.3.17", features = ["std", "env-filter"]}
