[package]
name = "p3ml-transcript"

edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
common.workspace = true

bincode.workspace = true
digest.workspace = true
rand.workspace = true
sha2.workspace = true
sha3.workspace = true

p3-challenger.workspace = true
p3-field.workspace = true
p3-maybe-rayon.workspace = true
p3-util.workspace = true

p3-baby-bear.workspace = true
p3-goldilocks.workspace = true
p3-koala-bear.workspace = true

[dev-dependencies]
common = { workspace = true, features = ["test-utils"] }

[features]
default = ["parallel"]
parallel = ["p3-maybe-rayon/parallel", "p3-util/parallel"]
