[package]
name = "p3ml-whir"

edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
common.workspace = true
merkle.workspace = true
poly.workspace = true
transcript.workspace = true

itertools.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true

p3-dft.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true

[dev-dependencies]
common = { workspace = true, features = ["test-utils"] }
p3-baby-bear.workspace = true
p3-challenger.workspace = true
p3-goldilocks.workspace = true
p3-koala-bear.workspace = true

digest.workspace = true
sha2.workspace = true
sha3.workspace = true

[features]
default = ["parallel"]
parallel = ["p3-maybe-rayon/parallel", "p3-util/parallel", "p3-dft/parallel"]
